--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: text_area
 description: A new Flutter project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/ZawWinNaung/text_area
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
