--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: text_area
-description: A new Flutter project.
+description: Text Area Flutter Project.
 version: 0.0.1
 homepage: https://github.com/ZawWinNaung/text_area
 
